# mugenCanvas

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
memo/: IMPLEMENTATION_PLAN.md  build.md  mugenCanvas_SPEC.md  ponti.drawio
src/: app.rs  io.rs  lib.rs  main.rs  main.ts  model.rs  state.rs  tauri-bridge.ts  undo.rs  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: app-state.ts  undo-manager.ts
src/canvas/: brush-engine.ts  brush.rs  camera-track.ts  camera.rs  canvas-view.ts  mod.rs  renderer.ts  viewport.rs  viewport.ts
src/panels/: brush-color-panel.ts  floating-panel.ts  timeline-panel.ts  tools-panel.ts
src/styles/: base.css  layout.css  panels.css
src/types/: model.ts
src/ui/: color_panel.rs  layers_panel.rs  mod.rs  statusbar.ts  timeline.rs  toolbar.rs  topbar.rs  topbar.ts
