[package]
name = "mugen-canvas"
version = "0.2.0"
description = "mugenCanvas - Infinite canvas animation app"
edition = "2021"

[[bin]]
name = "mugen-canvas"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gif = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = { version = "0.22", features = ["std"] }
rayon = "1"
rfd = "0.15"
egui-phosphor = "0.7"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
