[package]
name = "mugen-canvas"
version = "0.6.3"
description = "mugenCanvas - Infinite canvas animation app"
edition = "2021"

[[bin]]
name = "mugen-canvas"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland", "persistence"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gif = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = { version = "0.22", features = ["std"] }
rayon = "1"
rfd = "0.15"
egui-phosphor = "0.7"
openh264 = { version = "0.9", features = ["source"] }
minimp4 = "0.1"
ureq = "3"
self-replace = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
# シンボル名はデフォルトで残るためクラッシュログの関数名トレースは維持される
# debug = 1 は Linux でバイナリに DWARF を埋め込み 67MB まで肥大化するため削除
