[package]
name = "mugen-canvas"
version = "0.1.0"
description = "mugenCanvas - Infinite canvas animation app"
authors = []
edition = "2021"

[lib]
name = "mugen_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
